fix overflow-x

--- a/assets/base.css
+++ b/assets/base.css
@@ -1,3 +1,11 @@
+html {
+  overflow-x: clip;
+}
+
+body {
+  overflow-x: clip;
+}
+
 :root {
   --alpha-button-background: 1;
   --alpha-button-border: 1;
